index file added

--- a/index.html
+++ b/index.html
@@ -311,10 +311,7 @@
                 <div class="text-wrapper-7">Brochure</div>
               </div>
               <div class="CTA-button1">
-                <!-- <img
-                      class="img"
-                      src="https://generation-sessions.s3.amazonaws.com/bedf5492de5c65fc40b65ce6275d4b73/img/frame-15.svg"
-                    /> -->
+              
                 <div class="learn">Learn More</div>
               </div>
               <button class="button">
@@ -607,7 +604,7 @@
                       </div>
                     </div>
                     <div class="cardheaderright pl-3">
-                      <img src="./images/LinkedIN.png" alt="LinkedIN" />
+                      <img src="/image/LinkedIN.png" alt="LinkedIN" />
                     </div>
                   </div>
                   <div class="content pt-2">
@@ -646,7 +643,7 @@
                       </div>
                     </div>
                     <div class="cardheaderright pl-3">
-                      <img src="./images/LinkedIN.png" alt="LinkedIN" />
+                      <img src="/image/LinkedIN.png" alt="LinkedIN" />
                     </div>
                   </div>
                   <div class="content pt-2">
@@ -687,7 +684,7 @@
                       </div>
                     </div>
                     <div class="cardheaderright pl-3">
-                      <img src="/images/Quora.png" alt="LinkedIN" />
+                      <img src="/image/Quora.png" alt="LinkedIN" />
                     </div>
                   </div>
                   <div class="content pt-2">
