--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Frontend-1-contest-3</title>
     <link rel="stylesheet" href="style.css" />
-    <link rel="icon" type="image/x-icon" href="/image/Final Logo.png">
+    <link rel="icon" type="image/x-icon" href="/image/Final Logo.png" />
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css"
       rel="stylesheet"
@@ -61,9 +61,8 @@
     <main class="hero-section d-flex justify-content-between">
       <div class="divone">
         <h1 class="hero-text">
-          Launch your career with our <br /><span class="mid"
-            >Full Stack Developer</span
-          >
+          Launch your career with our <br />
+          <span class="mid">Full Stack Developer</span>
           Courses
         </h1>
         <p class="hero-para">
@@ -272,9 +271,7 @@
               <div class="CTA-button1">
                 <div class="learn">Learn More</div>
               </div>
-              <button class="button">
-                
-                <img
+              <button class="button"><img
                   class="img"
                   src="https://generation-sessions.s3.amazonaws.com/bedf5492de5c65fc40b65ce6275d4b73/img/frame-16.svg"
                 />
@@ -311,7 +308,7 @@
                 <div class="text-wrapper-7">Brochure</div>
               </div>
               <div class="CTA-button1">
-              
+
                 <div class="learn">Learn More</div>
               </div>
               <button class="button">
@@ -345,7 +342,7 @@
                   <div class="text-wrapper-4">Eligibility</div>
                 </div>
                 <p class="text-wrapper-9">
-                  2019-2023 Batch students, All Degrees
+                  2019-2023 Batch Students, All Degrees
                 </p>
               </div>
               <img
@@ -400,8 +397,7 @@
         <div id="firstlin">Over 300+ hiring partners</div>
         <div id="secondline">
           Top Startups &amp; MNC's Hire <br /><span id="soft"
-            >Software Engineer</span
-          >
+            >Software Engineer</span>
         </div>
 
         <div id="lastline">From AccioJob upto 41 Lakhs</div>
@@ -665,8 +661,7 @@
               <div class="cardone card border" id="card3">
                 <div class="pading">
                   <div
-                    class="cardheader d-flex flex-row ustify-content-between"
-                  >
+                    class="cardheader d-flex flex-row ustify-content-between">
                     <div class="cardheaderleft d-flex flex-row">
                       <div class="imgphoto">
                         <img
@@ -703,12 +698,11 @@
                   </div>
                 </div>
               </div>
-              <br />
+              <br>
               <div class="cardone card border" id="card4">
                 <div class="pading">
                   <div
-                    class="cardheader d-flex flex-row ustify-content-between"
-                  >
+                    class="cardheader d-flex flex-row ustify-content-between">
                     <div class="cardheaderleft d-flex flex-row">
                       <div class="imgphoto">
                         <img
