--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Frontend-1-contest-3</title>
     <link rel="stylesheet" href="style.css" />
-    <link rel="icon" type="image/x-icon" href="/image/Final Logo.png" />
+    <link rel="icon" type="image/x-icon" href="/image/Accio Logo.png" />
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css"
       rel="stylesheet"
@@ -19,14 +19,14 @@
         class="nav-bar position-sticky navbar justify-content-between flex-wrap"
       >
         <div class="first-section d-flex">
-          <img src="/image/Final Logo.png" alt="acciojob" />
+          <img src="/image/Accio Logo.png" alt="acciojob" />
           <div id="acciojob" class="d-flex">AccioJob</div>
           <div class="logo-child"></div>
           <div>
             <img
               class="nsdc-logo"
               alt=""
-              src="/image/NSDC_Logo_in_clear_background 1.png"
+              src="/image/NSDC_Logo_in_clear_background.png"
             />
           </div>
         </div>
@@ -34,7 +34,7 @@
           <div class="courses-parent d-flex">
             Courses
             <div class="arrow-icon">
-              <img src="/image/Arrow.png" alt="arrow" />
+              <img src="/image/drop down.png" alt="arrow" />
             </div>
           </div>
           <div class="courses-parent">
@@ -46,7 +46,7 @@
           <div class="courses-parent d-flex">
             More
             <div class="arrow-icon">
-              <img src="/image/Arrow.png" alt="arrow" />
+              <img src="/image/drop down.png" alt="arrow" />
             </div>
           </div>
           <div class="btn-parent d-flex">
@@ -74,7 +74,7 @@
         >
           <div class="first-title d-flex align-items-center">
             <div class="img-group">
-              <img src="./image/Group 907.png" alt="fd" />
+              <img src="/image/achivements.png" alt="fd" />
             </div>
             <div class="img-text-group">
               <h3 class="h-text">41 Lakhs</h3>
@@ -84,7 +84,7 @@
 
           <div class="first-title d-flex align-items-center">
             <div class="img-group">
-              <img src="/image/Group 48097592.png" alt="fd" />
+              <img src="/image/duocontact.png" alt="fd" />
             </div>
             <div class="img-text-group">
               <h3 class="h-text">300+</h3>
@@ -94,7 +94,7 @@
 
           <div class="first-title d-flex align-items-center">
             <div class="img-group">
-              <img src="./image/Group 903.png" alt="fd" />
+              <img src="/image/trust logo.png" alt="fd" />
             </div>
             <div class="img-text-group">
               <h3 class="h-text">100%</h3>
@@ -104,14 +104,14 @@
 
           <div class="first-title d-flex align-items-center">
             <div class="img-group">
-              <img src="./image/Group 48097591.png" alt="fd" />
+              <img src="/image/money.png" alt="fd" />
             </div>
             <div class="img-text-group">
               <h3 class="h-text">8.3 LPA</h3>
               <p>Average Salary</p>
             </div>
           </div>
-          <img src="/image/Group 39866.png" alt="fd" />
+          <img src="/image/curly logo.png" alt="fd" />
         </div>
         <div class="made-with d-flex justify-content-center">
           <p class="made-with-p">Made with 💙 by an AccioJob Student</p>
@@ -600,7 +600,7 @@
                       </div>
                     </div>
                     <div class="cardheaderright pl-3">
-                      <img src="/image/LinkedIN.png" alt="LinkedIN" />
+                      <img src="/image/LinkedN.png" alt="LinkedIN" />
                     </div>
                   </div>
                   <div class="content pt-2">
@@ -639,7 +639,7 @@
                       </div>
                     </div>
                     <div class="cardheaderright pl-3">
-                      <img src="/image/LinkedIN.png" alt="LinkedIN" />
+                      <img src="/image/LinkedN.png" alt="LinkedIN" />
                     </div>
                   </div>
                   <div class="content pt-2">
@@ -679,7 +679,7 @@
                       </div>
                     </div>
                     <div class="cardheaderright pl-3">
-                      <img src="/image/Quora.png" alt="LinkedIN" />
+                      <img src="/image/Quoraa.png" alt="LinkedIN" />
                     </div>
                   </div>
                   <div class="content pt-2">
@@ -720,7 +720,7 @@
                       </div>
                     </div>
                     <div class="cardheaderright pl-3">
-                      <img src="/image/LinkedIN.png" alt="LinkedIN" />
+                      <img src="/image/LinkedN.png" alt="LinkedIN" />
                     </div>
                   </div>
                   <div class="content pt-2">
@@ -758,7 +758,7 @@
                       </div>
                     </div>
                     <div class="cardheaderright pl-3">
-                      <img src="/image/LinkedIN.png" alt="LinkedIN" />
+                      <img src="/image/LinkedN.png" alt="LinkedIN" />
                     </div>
                   </div>
                   <div class="content pt-2">
@@ -798,7 +798,7 @@
                       </div>
                     </div>
                     <div class="cardheaderright pl-3">
-                      <img src="/image/LinkedIN.png" alt="LinkedIN" />
+                      <img src="/image/LinkedN.png" alt="LinkedIN" />
                     </div>
                   </div>
                   <div class="content pt-2">
