--- a/index.html
+++ b/index.html
@@ -70,8 +70,7 @@
           Leading Tech Companies.
         </p>
         <div
-          class="hero-section-card d-flex justify-content-between align-items-center border shadow p-2 mb-5 bg-body-tertiary rounded px-3"
-        >
+          class="hero-section-card d-flex justify-content-between align-items-center border shadow p-2 mb-5 bg-body-tertiary rounded px-3">
           <div class="first-title d-flex align-items-center">
             <div class="img-group">
               <img src="/image/achivements.png" alt="fd" />
@@ -120,7 +119,7 @@
       <div id="divtwo" class="d-flex py-3 border border-0">
         <div class="second-card d-flex">
           <h2>
-            Start Attending Live <br />
+            Start Attending Live <br>
             Classes For Free
           </h2>
           <p>
