--- a/index.html
+++ b/index.html
@@ -15,19 +15,15 @@
   </head>
   <body>
     <header class="head">
-      <nav
-        class="nav-bar position-sticky navbar justify-content-between flex-wrap"
-      >
+      <nav class="nav-bar position-sticky navbar justify-content-between flex-wrap">
         <div class="first-section d-flex">
           <img src="/image/Accio Logo.png" alt="acciojob" />
           <div id="acciojob" class="d-flex">AccioJob</div>
           <div class="logo-child"></div>
           <div>
-            <img
-              class="nsdc-logo"
-              alt=""
-              src="/image/NSDC_Logo_in_clear_background.png"
-            />
+            <img class="nsdc-logo"
+              alt="nsdc"
+              src="/image/NSDC_Logo_in_clear_background.png"/>
           </div>
         </div>
         <div class="text-items d-flex flex-wrap">
@@ -90,7 +86,6 @@
               <p>Partner Companies</p>
             </div>
           </div>
-
           <div class="first-title d-flex align-items-center">
             <div class="img-group">
               <img src="/image/trust logo.png" alt="fd" />
@@ -100,7 +95,6 @@
               <p>Job Guarantee</p>
             </div>
           </div>
-
           <div class="first-title d-flex align-items-center">
             <div class="img-group">
               <img src="/image/money.png" alt="fd" />
@@ -134,8 +128,8 @@
               type="text"
               id="fname"
               name="fname"
-              placeholder="Full Name"
-            /><br />
+              placeholder="Full Name"/>
+            <br>
             <input
               class="hero-form-frame-section2-1 border border-0"
               type="text"
@@ -149,9 +143,7 @@
           </form>
           <div class="hero-form-frame-section2-2">
             By clicking ‘Apply now’, you agree to our
-            <span class="hero-form-frame-section2-term"
-              >Terms & Conditions</span
-            >
+            <span class="hero-form-frame-section2-term">Terms & Conditions</span>
           </div>
         </div>
       </div>
