html file added

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
           <div id="acciojob" class="d-flex">AccioJob</div>
           <div class="logo-child"></div>
           <div>
-            <img class="nsdc-logo"
+            <img class="nsdc-log"
               alt="nsdc"
               src="/image/NSDC_Logo_in_clear_background.png"/>
           </div>
@@ -385,7 +385,7 @@
     </section>
     <section class="secoundlast d-flex flex-column justify-content-between">
       <div class="partone pt-5">
-        <div id="firstlin">Over 300+ hiring partners</div>
+        <h4 id="firstlin">Over 300+ hiring partners</h4>
         <div id="secondline">
           Top Startups &amp; MNC's Hire <br /><span id="soft"
             >Software Engineer</span>
@@ -398,7 +398,7 @@
           <div class="imag">
             <img
               width="120px"
-              height="40px"
+              height="30px"
               src="https://s3-alpha-sig.figma.com/img/d85a/692e/38df2c57ef3c2afa6dd5bc4140e91e92?Expires=1694390400&amp;Signature=GIAdOvBvnNCE99CM3wHq2x4Bpw4E~FqK5NREF4VYQY9pHbrmSSP4e1f8jEQ-~xMq4Geq1WFZua1dfxQ4w~Kxhw2itOc8WMj8s6zJeEzMdXUSyefkzNY6KzXvSx5DmPyjD9JH4vkNqRidA7~6D-G47V0xqGz-HLxNbtlVEAWjK1AkM5I5xKDNAR6r91sDXSwfUiSJ5WxbtAsJ8ViZr6IyD8mBDamcr4vlJTH8D27bi9oL1qAGV6EuvOJGNGNKp5b16mZ9qC~LRo3pGbDE-59TcpaOxOj7wOtlrwiRUoppkF9mAwuA-qm9niXVvTl36uhvHi5kpO4sEaMjh~XOEpiXhQ__&amp;Key-Pair-Id=APKAQ4GOSFWCVNEHN3O4"
               alt="logo"
             />
